assets/CSS/style.css
/*caroussel*/


.carousel-slide {
    object-fit: cover;
}
.carousel-item img {
    height: 95vh; 
    overflow: hidden;
      } 



/* testimonials */

.testimonial-section {
    margin: 0 20px;
}

.flexbox-container-text {
    font-family: 'BenchNine', sans-serif;
    text-align: justify;
    max-width: 400px;
    margin-top: 15px;
}

.flexbox-container-picture {
    display: block;
    max-width: 300px;
    margin: 0 auto;
    object-fit: cover;
}

.button {
    display: block;
    margin: 0 auto;
    width: 150px;

}

/* Contact form */

.contact-form {
    margin-top: 20px;
    
}

.contact-form-heading{
    background-color: #e5e7ec;
    position:relative;
    width: 100vw;
    
}

.contact-form-heading1{
    position:relative;
    top: 15px; 
    text-align: center;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    
}

.contact-form-heading2{
    text-align: center;
    font-family: 'Great Vibes', cursive;
    font-size: 3em;
}

.form-element {
    display: block;
    margin: 5px auto;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    padding: 5px;
    width: 270px;
    
}

.form-text {
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    padding: 5px;
    text-align: center;
    
}

.form-text-area {
    display: block;
    margin: 10px auto;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    width:90%; 
    max-width: 800px;
}

/* Footer */

footer {
    background-color: #e5e7ec;
    height:50px;
    position: fixed;
    bottom: 0;
    right: 0;
    }

footer div {
    text-align:center;
    padding-top:10px;
    }

.link-socmed {
    padding-left:5px;
    padding-right:5px;
    color:black;
    }

.link-socmed:hover {
    color: #949599;
    }

.copyright {position:absolute; 
    display:inline-block;
    right:5px; 
    bottom:0; 
    margin:0 auto;
    font-family: 'BenchNine', sans-serif;
    }

/* Gallery */

.gallery-navigation {
    background-color: #e5e7ec;
    height: 45px;
    padding: 7px;
    text-align: center;
    position: fixed;
    width: 100vw;
     }

.gallery-navigation li {
    display:inline-block;
    }

.gallery-navigation a {
    text-decoration:none;
    list-style-type: none;
    text-decoration:none;
    color: #949599;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.2em;
    }
    
.gallery-navigation a:hover{
    border-bottom:1px solid #777777;
    }

.gallery-container {
    display: flex;   
    max-width: 100vw;
    justify-content: center;  
}

.gallery-container img {
    width: 90vw; 
    margin: 3px auto;
    border-radius: 8px;
    object-fit: cover;
}

.gallery-text {
    font-family: 'BenchNine', sans-serif;
    text-align: center;
}

/* Pckages */

.packages-headline {
    color: #949599;
    font-family: 'BenchNine', sans-serif;
    font-size: 10vw;
    text-align:center;
    margin: 30px 10px;
}

.package{
    display: flex;   
    max-width: 100vw;
    flex-wrap: wrap;
    align-items: baseline;
    justify-content: center;
}
.package-name{
    color: #949599;
    font-family: 'BenchNine', sans-serif;
    text-align: center;
    font-size: 7vw;
}

.package-image { 
    display: inline;
    margin: 7px auto;
   }

.package-image img { 
    border-radius: 8px;
    object-fit: cover;
    max-width: 470px; 
    min-width: 300px;
}

.package-description{
    max-width: 470px; 
    min-width: 300px;
    object-fit: cover;
    font-family: 'BenchNine', sans-serif;
    text-align: center;

}

hr {
    border: 0; 
    color: #949599;
    border-top: 2px solid ;
    border-radius: 5px;
    margin: 5vh auto;
    width:15vw;
  }

/* About */

.about{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin: 30px 4vw;
}

.photographer-picture-container{
    max-width:350px;
    height: 350px;
    border-style: solid;
    border-color: #cccccc;
    border-width: 1px;
    border-radius: 50%;
    margin: 0 auto;
    flex-grow: 1;
}

.photographer-picture{
    background: no-repeat center center;
    height: 100% ;
    display: block;
    border-radius: 50%;
    margin: 0 auto;}

.about-text-container{
    margin: 0 auto;
    height: 300px;
    text-align: center;
    padding: 20px 0;
    flex-grow: 1;
}


.about-text{
    max-width: 400px;
    padding: 0;
    margin: auto;
    text-align: justify;
    color: #949599;
    font-family: 'BenchNine', sans-serif;
}


/* media quieries */

@media screen and (max-width: 1386px) {
    .hidden-testimonial {
        display: none !important;
    }
}

@media screen and (min-width: 1387px) {
    .visible-testimonial {
        display: none !important;
    }
}

@media screen and (min-width: 800px) {
    .gallery-container img {
        width: 49vw;
    }
    .package{
        margin:0 40px;
    }
    .packages-headline {
       font-size: 6em;
    }
    .package-name {
        font-size: 4em;
    }
    .package-description{
        margin: 20px;
    }
 }

 @media screen and (min-width: 900px) {
    .gallery-container img {
        width: 32vw;
    }
 }
  
 @media screen and (min-width: 1025px) {
    .gallery-container img {
        width: 24vw;
    }
 }
  
 @media screen and (min-width: 1200px) {
    .hide-big {
        display: none;}
    }
  
 @media screen and (max-width: 1199px) {
        .hide-small {
            display: none !important;
        }
    }
  
 @media screen and (min-width: 1200px) {
    .hide-big {
        display: none;}
    }
  
 @media screen and (max-width: 1199px) {
        .hide-small {
            display: none !important;
        }
    }
 

